samples/_failures_safe/1761499253_b1593d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0170f063.c: In function ‘main’:
./samples/SAFE/__tmp_0170f063.c:172:5: error: expected ‘,’ or ‘;’ at end of input
  172 |     int result = parse_expression
      |     ^~~
./samples/SAFE/__tmp_0170f063.c:172:5: error: expected declaration or statement at end of input
